add mfr to frontmatter

--- a/src/pages/gear/doepfer/a-183-9/index.mdx
+++ b/src/pages/gear/doepfer/a-183-9/index.mdx
@@ -1,7 +1,8 @@
 ---
-title: Quad USB Supply 
+title: Quad USB Supply
 menu: gear
+mfr: Doepfer
 tags: [doepfer]
 ---
 
-# Quad USB Supply 
+# Quad USB Supply
