--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -1,3 +1,24 @@
 ---
 title: About
 ---
+
+# Ultra Heavy Beat
+
+Hello, and welcome to my music/gear site - an homage to G.A.S!
+
+This site mainly catalogues gear that I own/have owned, useful info to me that I'll forget if I don't write it down,
+and fun sounds that I have maybe made.
+
+## Posts
+
+The main landing of this site is a blog, probably around small gear demos, or just fun jam sessions.
+
+## Gear Pages
+
+I've tried to structure it so that each piece of gear has its own page with a brief overview. In addition to the main blog landing page,
+each gear page also has a feed of related posts, so you can easily find info/demos of the gear you might be interested in!
+
+## Glossary
+
+In an effort to remember what things mean, or at least know where to look, I've added an (ever growing) glossary page
+with some terms and definitions that may be handy.
