--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -7,11 +7,11 @@ title: About
 Hello, and welcome to my music/gear site - an homage to G.A.S!
 
 This site mainly catalogues gear that I own/have owned, useful info to me that I'll forget if I don't write it down,
-and fun sounds that I have maybe made.
+and fun sounds that I have remembered to record.
 
 ## Posts
 
-The main landing of this site is a blog, probably around small gear demos, or just fun jam sessions.
+The main landing of this site is a blog, mainly around small gear demos, and/or just fun jam sessions.
 
 ## Gear Pages
 
