update mfr pages

--- a/src/pages/gear/expert-sleepers/index.mdx
+++ b/src/pages/gear/expert-sleepers/index.mdx
@@ -2,3 +2,9 @@
 title: Expert Sleepers
 menu: mfr
 ---
+
+# Expert Sleepers Gear
+
+<GearList mfr={'expert-sleepers'}/>
+
+<PostList tag={'expert-sleepers'}/>
