--- a/src/pages/gear/mutable-instruments/index.mdx
+++ b/src/pages/gear/mutable-instruments/index.mdx
@@ -3,4 +3,8 @@ title: Mutable Instruments
 menu: mfr
 ---
 
-Mutable Instruments
+# Mutable Instruments Gear
+
+<GearList mfr={'mutable-instruments'}/>
+
+<PostList tag={'mutable-instruments'}/>
