--- a/src/pages/gear/roger-linn-designs/index.mdx
+++ b/src/pages/gear/roger-linn-designs/index.mdx
@@ -2,3 +2,9 @@
 title: Roger Linn Designs
 menu: mfr
 ---
+
+# Roger Linn Designs Gear
+
+<GearList mfr={'roger-linn-designs'}/>
+
+<PostList tag={'roger-linn-designs'}/>
